lfi-leg/out.txt
lfi-amd64.leg: In function ‘yy_7_Addr’:
lfi-amd64.leg:324:10: error: expected ‘;’ before ‘tfree’
  324 |         }
      |          ^
      |          ;
  325 |         tfree(i);
      |         ~~~~~
Knitfile: 'lfi-leg-amd64': error during recipe: exit status 1
